# Schedule/src/main/java/pl/polsl/controller/ScheduleController.java
@@ -3,6 +3,8 @@ package pl.polsl.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Controller;
 import pl.polsl.dto.ScheduleDto;
 import pl.polsl.mapper.ScheduleMapper;
@@ -64,5 +66,14 @@ public class ScheduleController implements ScheduleApi {
         ScheduleDto result = scheduleService.managerSingSchedule(id);
 
         return new ResponseEntity<>(scheduleMapper.mapDtoToModelApi(result), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<ScheduleModelApi>> getScheduleListForWorker() {
+        List<ScheduleModelApi> result = scheduleService.getScheuleListForSelfWorker().stream()
+                .map(scheduleMapper::mapDtoToModelApi)
+                .collect(Collectors.toList());
+
+        return new ResponseEntity<>(result, HttpStatus.OK);
     }
 }
